<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/slati"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/text_margin_medium_10"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin_xlarge_20"
                        android:layout_weight="0.5"
                        android:background="@drawable/gradient"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/dark_white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/text_margin_medium_10"
                            android:gravity="center|bottom"
                            android:text="@string/Welcome_to_cardview"
                            style="@style/welcome_textStyle"
                            />

                        <TextView
                            android:textColor="@color/dark_white"
                            style="@style/welcome_textStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/turn_on_ur_headlights"

                    />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/border_round_dark_slati"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin_18_dp">
                     </LinearLayout>
                     </LinearLayout>
                     </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/one"
                android:layout_weight="0.5"
                android:background="@color/dark_slati"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    style="@style/button_textStyle"
                    android:id="@+id/tv_choose_ride"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_xxxlarge_25"
                    android:layout_marginRight="@dimen/text_margin_xxxlarge_25"
                    android:layout_marginTop="@dimen/text_margin_xlarge_20"
                    android:background="@drawable/border_round_yellow"
                    android:gravity="center"
                    android:padding="@dimen/text_margin_medium_10"
                    android:text="@string/choose_your_ride"
                    android:textColor="@color/dark_wh"
                   />

                <TextView
                    android:layout_marginTop="@dimen/activity_margin_normal"
                    style="@style/button_textStyle"
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin_xlarge_20"
                    android:layout_marginLeft="@dimen/text_margin_xxxlarge_25"
                    android:layout_marginRight="@dimen/text_margin_xxxlarge_25"
                    android:background="@drawable/border_round_yellow"
                    android:gravity="center"
                    android:padding="@dimen/text_margin_medium_10"
                    android:text="@string/about"
                    android:textColor="@color/dark_wh"
                    />
                 </LinearLayout>
                 </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_margin_medium_10"
            android:layout_marginRight="@dimen/text_margin_medium_10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_gif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
               </LinearLayout>


               </RelativeLayout>
               </LinearLayout>