<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@drawable/ic_back"
            android:gravity="center"
            android:padding="@dimen/activity_margin_normal"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:background="@drawable/ic_med"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            >
            <TextView
                android:singleLine="true"
                android:id="@+id/tv_header"
                style="@style/header_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black" />

            <TextView
                android:singleLine="true"
                android:id="@+id/tv_sub_header"
                style="@style/subheader_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black" />



        </LinearLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:background="@drawable/ic_submit"
            android:gravity="center"
            android:padding="5dp"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"


            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_back2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:background="@drawable/ic_back"
            android:gravity="center"
            android:padding="@dimen/activity_margin_normal"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />



        <LinearLayout
            android:background="@drawable/ic_header_med"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            >
            <TextView
                android:id="@+id/tv_header2"
                style="@style/header_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_sub_header2"
                style="@style/subheader_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@android:color/black" />



        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_read_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_margin_normal"
        android:background="@color/white"
        android:elevation="3dp"
        android:visibility="visible"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_gray">

            <TextView
                android:id="@+id/tv_read_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/activity_margin_normal"
                android:text="@string/read_review"
                android:textSize="@dimen/text_margin_xlarge_20"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_write_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:visibility="visible"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_gray">

            <TextView
                android:id="@+id/tv_write_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/text_margin_medium_10"
                android:text="@string/write_review"
                android:textSize="@dimen/text_margin_xlarge_20"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_write_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:visibility="visible"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/app_gray"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/et_headings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="start"
                        android:hint="@string/write_heading_here"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLength="25"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:id="@+id/cv_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/text_margin_medium_10"
                android:background="@color/white"
                android:elevation="3dp"
                android:visibility="visible"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/app_gray"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/et_write_review"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@null"
                        android:gravity="start"
                        android:hint="@string/write_review_here"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences|textMultiLine"
                        android:padding="12dp"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <TextView
                style="@style/welcome_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_normal"
                android:text="@string/rating"
                />

            <RatingBar
                android:id="@+id/review_rating_bar"
                style="@style/themeRatingBarlarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:max="5"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>


    <!--style="@style/themeRatingBarSmall"-->